INTYGFV-15291: Refactored FK7804 & AG7804. This includes removal of duplicated code & separation of functionality linked to questions and categories into separate classes. (#736)